# clang_tools

./: .gitignore  Dockerfile  LICENSE  Makefile.common  README.md  clang-parse  pyproject.toml
libtooling/: ASTExporter.h  Makefile  NamePrinter.h  SimplePluginASTAction.cpp  ast_exporter_bin.cpp
libtooling/jsonlib/: JSONWriter.h
libtooling/jsonlib/tests/: jsontest.cpp
src/: Dockerfile
src/ccm_clang_tools/: Dockerfile  build_plugin.py  clang_parse.py  get_clang_tool.py  utils.py
src/ccm_clang_tools/libtooling/: ASTExporter.h  SimplePluginASTAction.h
src/libtooling/: ASTExporter.h
