[project]
name = "ccm-clang-tools"
version = "0.1.1"
description = ""
authors = [
    {name = "Gabriel Ingram", email = "gabriel.ingram@colorado.edu"},
]
dependencies = [
    "docker~=5.0",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/gjingram/clang_tools"

[tool.pdm]
build = "build_bin"
package-dir = "src"
includes = [
    "src/**/*.py",
    "src/ccm_clang_tools/libtooling/clang_tool.dylib",
    "src/ccm_clang_tools/libtooling/ast_exporter_bin"
]
source-includes = [
    "build_bin.py",
    "LICENSE",
    "README.md",
    "src/ccm_clang_tools/Makefile*",
    "src/ccm_clang_tools/libtooling/",
    "src/ccm_clang_tools/Dockerfile",
    "src/ccm_clang_tools/LICENSE",
    "src/ccm_clang_tools/LLVM-LICENSE",
    "src/ccm_clang_tools/build_plugin.py"
]
excludes = [
    "**/*.o",
]

[tool.pdm.dev-dependencies]
publish = [
    "twine~=3.4",
]

[build-system]
requires = [
    "pdm-pep517",
    "setuptools"
    ]
build-backend = "pdm.pep517.api"

